--- a/package.json
+++ b/package.json
@@ -25,19 +25,45 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@pantheon-systems/pcc-react-sdk": "~5.1.1",
+    "@radix-ui/react-popover": "1.1.6",
+    "@tailwindcss/typography": "0.5.10",
+    "@types/node": "20.17.19",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "dotenv": "16.4.7",
+    "next": "15.5.4",
+    "query-string": "8.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hot-toast": "2.5.2",
+    "react-icons": "5.5.0",
+    "react-infinite-scroll-component": "6.1.0",
+    "react-loading-skeleton": "3.5.0",
+    "react-markdown": "10.1.0",
+    "react-remove-scroll": "2.6.3",
+    "react-responsive": "10.0.1",
+    "swr": "2.3.2",
+    "tailwind-merge": "2.6.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@playwright/test": "1.51.1",
+    "@testing-library/react": "16.3.0",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@vitejs/plugin-react": "5.1.1",
+    "autoprefixer": "10.4.17",
+    "c8": "7.14.0",
+    "eslint": "*",
+    "eslint-config-next": "*",
+    "jsdom": "22.1.0",
+    "postcss": "8.4.35",
+    "prettier": "3.2.5",
+    "tailwindcss": "3.4.1",
+    "tailwindcss-animate": "1.0.7",
+    "typescript": "5.5.4",
+    "vite": "6.4.1",
+    "vitest": "1.6.1",
+    "vitest-fetch-mock": "0.2.2"
   }
 }
