--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@pantheon-systems/nextjs-cache-handler": "^0.4.0",
     "@pantheon-systems/pcc-react-sdk": "~5.1.1",
     "@radix-ui/react-popover": "1.1.6",
     "@tailwindcss/typography": "0.5.10",
