--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "dotenv": "16.4.7",
-    "next": "15.5.4",
+    "next": "16.1.6",
     "query-string": "8.2.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "react-hot-toast": "2.5.2",
     "react-icons": "5.5.0",
     "react-infinite-scroll-component": "6.1.0",
@@ -50,13 +50,13 @@
   "devDependencies": {
     "@playwright/test": "1.51.1",
     "@testing-library/react": "16.3.0",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
+    "@types/react": "19.2.14",
+    "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.1",
     "autoprefixer": "10.4.17",
     "c8": "7.14.0",
     "eslint": "*",
-    "eslint-config-next": "*",
+    "eslint-config-next": "16.1.6",
     "jsdom": "22.1.0",
     "postcss": "8.4.35",
     "prettier": "3.2.5",
@@ -66,5 +66,9 @@
     "vite": "6.4.1",
     "vitest": "1.6.1",
     "vitest-fetch-mock": "0.2.2"
+  },
+  "overrides": {
+    "@types/react": "19.2.14",
+    "@types/react-dom": "19.2.3"
   }
 }
